Bug 1724182 - Unescape the fragment from the URL when using as an internal PDF destination. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D121861